--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 
     <!-- Result! -->
     <div id="ResultPage">
-
+        <div>
+            <h1>Result</h1>
+            <img src="" alt="">
+        </div>
     </div>
 </body>
 <script type="module" src="app.js"></script>
