--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
 
     <!-- Result! -->
     <div id="ResultPage">
-        <div>
+        <div id="ResultContent">
             <h1>Result</h1>
-            <img src="" alt="">
+            <img src="/img/reptile_HP.png" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, a. Pariatur officiis quibusdam assumenda
+                placeat illum nostrum voluptas at. Facere!</p>
         </div>
     </div>
 </body>
