adjusting weights/ finishing up ResultPage

--- a/index.html
+++ b/index.html
@@ -43,10 +43,13 @@
     <!-- Result! -->
     <div id="ResultPage">
         <div id="ResultContent">
-            <h1>Result</h1>
-            <img src="/img/reptile_HP.png" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, a. Pariatur officiis quibusdam assumenda
-                placeat illum nostrum voluptas at. Facere!</p>
+            <h1 id="ResultHeader">Result</h1>
+            <img id="ResultImage" src="/img/reptile_HP.png" alt="">
+            <p id="ResultText"></p>
+            <div><button id="ReplayButton">Replay</button>
+                <button id="ShareButton">Share</button>
+            </div>
+
         </div>
     </div>
 </body>
