--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/Main.css">
-    <title>What kind of reptile are you?!</title>
+    <title>What kind of reptile are you?</title>
 </head>
 
 <body>
