--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
     <nav>
-        <h1>Reptile Quiz</h1>
+        <a id="PageTitle" href="">
+            <h1>Reptile Quiz</h1>
+        </a>
     </nav>
     <!-- Main Landing Page -->
     <div id="MainPage">
